First paper draft (#29)
* draft

* draft of numericall section

* draft to jump back to numeric

* A good writeup up to purely random analytically

* write up of purely random strategies

This includes the analytical and the numerical section

* reactive analytically

* fix reactive script

* finish algorithm reactive

* reactive numerics sections

* stability of defection

* first draft of paper + reactive script

* morning corrections

* Reactive script (#31)

* rename functions and add docstrings

* tweak implementation and add tests

* Fix script for matches

Find optimal reactive for matches and train gambler

* implement tournaments

* fix path to main.py

* fix stability of defection section

* generate images for reactive players

* Fix reactive script (#32)

* remove function from script.

All functions used in our main script leaved in the same file, main.py.
The functions have been moved to optimisation so they can be used
in different scripts or just call them via opt_mo

* no longer need to import main just opt_mo

* fix reactive script

Now utility is being optimised using bayesian algorithm as well.
grambler is notbeing trained cause it is not needed.

* change title

* minor changes

* fix comments in introduction.

Apart from adding Nowak's article (opened an issue).

* change title of section two

* fix utility section

* fix reactive implementation. (#39)

After performing several numerical trials we noticed that the reactive
optimisation was not captured best behaviour. This fixes the issue.

The issue was that when p1 is 0 or 1 then we solve only the second
partial derivative. The derivative which is depended on p2

* dummy

* Last tweaks in tility against memory one players

Fixes plots, Theorem 2 and discuss the validation
though Stewart and Plotkin's tournament. Table
with results still need to be added.

* add reslts against stewart and plotkin's tour

*

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -148,3 +148,229 @@ url = {http://arxiv.org/abs/1604.00896},
 volume = {1},
 year = {2016}
 }
+
+% Convexity Reference
+@book{Gradshteyn2007,
+  added-at = {2011-05-02T05:41:34.000+0200},
+  author = {Gradshteyn, I. S. and Ryzhik, I. M.},
+  biburl = {https://www.bibsonomy.org/bibtex/2bae535b4ef6bc86a7a04e6de6fa4d311/peter.ralph},
+  description = {MR: Publications results for "MR Number=(2360010)"},
+  edition = {Seventh},
+  interhash = {1850c3bd20bb756bfc17136ec16a9a7c},
+  intrahash = {bae535b4ef6bc86a7a04e6de6fa4d311},
+  isbn = {978-0-12-373637-6; 0-12-373637-4},
+  keywords = {reference},
+  mrclass = {00A22 (33-00 65-00 65A05)},
+  mrnumber = {2360010 (2008g:00005)},
+  pages = {xlviii+1171},
+  publisher = {Elsevier/Academic Press, Amsterdam},
+  timestamp = {2011-05-02T05:41:34.000+0200},
+  title = {Table of integrals, series, and products},
+  year = 2007
+}
+
+@book{Anton2014,
+  added-at = {2016-05-31T10:53:16.000+0200},
+  author = {Anton, Howard and Rorres, Chris},
+  biburl = {https://www.bibsonomy.org/bibtex/23d125adef6e8701a7dce93bdc817f3bc/ytyoun},
+  edition = {Eleventh},
+  interhash = {661a46a89feed199e73bf45361ebae37},
+  intrahash = {3d125adef6e8701a7dce93bdc817f3bc},
+  isbn = {9781118434413 1118434412 9781118474228 1118474228},
+  keywords = {linear.algebra matrix textbook},
+  publisher = {Wiley},
+  refid = {856647689},
+  timestamp = {2016-05-31T13:03:34.000+0200},
+  title = {Elementary Linear Algebra: Applications Version},
+  year = 2014
+}
+
+% Studying non concave quadratic ratio
+@article{Hongyan2014,
+author = {Hongyan Cai and Yanfei Wang and Tao Yi},
+title = {An approach for minimizing a quadratically constrained fractional 
+quadratic problem with application to the communications over wireless channels
+},
+journal = {Optimization Methods and Software},
+volume = {29},
+number = {2},
+pages = {310-320},
+year = {2014},
+doi = {10.1080/10556788.2012.711330},
+URL = {http://dx.doi.org/10.1080/10556788.2012.711330},
+eprint = {http://dx.doi.org/10.1080/10556788.2012.711330}
+}
+
+@article{Beck2009,
+author="Beck, Amir
+and Teboulle, Marc",
+title="A convex optimization approach for minimizing the ratio of indefinite 
+quadratic functions over an ellipsoid",
+journal="Mathematical Programming",
+year="2009",
+volume="118",
+number="1",
+pages="13--35",
+issn="1436-4646",
+doi="10.1007/s10107-007-0181-x",
+url="http://dx.doi.org/10.1007/s10107-007-0181-x"
+}
+
+
+% Companion Matrix
+@article{Edelman1995,
+  title={Polynomial roots from companion matrix eigenvalues},
+  author={Edelman, Alan and Murakami, H},
+  journal={Mathematics of Computation},
+  volume={64},
+  number={210},
+  pages={763--776},
+  year={1995}
+}
+
+% resultant
+@Inbook{Akritas1991,
+author="Akritas, Alkiviadis G.",
+editor="Meyer, Kenneth R.
+and Schmidt, Dieter S.",
+title="Sylvester's form of the Resultant and the Matrix-Triangularization Subresultant PRS Method",
+bookTitle="Computer Aided Proofs in Analysis",
+year="1991",
+publisher="Springer New York",
+address="New York, NY",
+pages="5--11",
+abstract="Sylvester's form of the resultant is often encountered in the literature but is completely different from the one discussed in this paper; the form described here can be found in Sylvester's paper of 1853 [12], and has been previously used only once, by Van Vleck [13] in the last century. Triangularizing this ``rediscovered'' form of the resultant we obtain a new method for computing a greatest common divisor (gcd) of two polynomials in Z[x], along with their polynomial remainder sequence (prs); since we are interested in exact integer arithmetic computations we make use of Bareiss's [4] integer-preserving transformation algorithm for Gaussian elimination. This new method uniformly treats both complete and incomplete prs's and, for the polynomials of the prs's, it provides the smallest coefficients that can be expected without coefficient gcd computations.",
+isbn="978-1-4613-9092-3",
+doi="10.1007/978-1-4613-9092-3_2",
+url="https://doi.org/10.1007/978-1-4613-9092-3_2"
+}
+
+% Archetypes
+@article{Harper2017,
+    author = {Harper, Marc AND Knight, Vincent AND Jones, Martin AND Koutsovoulos, Georgios AND Glynatsi, Nikoleta E. AND Campbell, Owen},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Reinforcement learning produces dominant strategies for the Iterated Prisoner’s Dilemma},
+    year = {2017},
+    month = {12},
+    volume = {12},
+    url = {https://doi.org/10.1371/journal.pone.0188046},
+    pages = {1-33},
+    number = {12},
+    doi = {10.1371/journal.pone.0188046}
+}
+
+% Linear Algebra book
+@book{kepner2011,
+  title={Graph algorithms in the language of linear algebra},
+  author={Kepner, Jeremy and Gilbert, John},
+  year={2011},
+  publisher={SIAM}
+}
+
+% Lagrange multipliers
+@book{bertsekas2014,
+  title={Constrained optimization and Lagrange multiplier methods},
+  author={Bertsekas, Dimitri P},
+  year={2014},
+  publisher={Academic press}
+}
+
+% Karush-Kuhn-Tucker
+@article{Giorgi2016,
+ author = {Giorgi, Giorgio and Jim{\'e}nez, Bienvenido and Novo, Vicente},
+ title = {Approximate Karush---Kuhn---Tucker Condition in Multiobjective Optimization},
+ journal = {J. Optim. Theory Appl.},
+ issue_date = {October   2016},
+ volume = {171},
+ number = {1},
+ month = oct,
+ year = {2016},
+ issn = {0022-3239},
+ pages = {70--89},
+ numpages = {20},
+ url = {http://dx.doi.org/10.1007/s10957-016-0986-y},
+ doi = {10.1007/s10957-016-0986-y},
+ acmid = {3001290},
+ publisher = {Plenum Press},
+ address = {New York, NY, USA},
+} 
+
+% bayesian optimisation
+@misc{Head2018,
+  author       = {Tim Head and
+                  MechCoder and
+                  Gilles Louppe and
+                  Iaroslav Shcherbatyi and
+                  fcharras and
+                  Zé Vinícius and
+                  cmmalone and
+                  Christopher Schröder and
+                  nel215 and
+                  Nuno Campos and
+                  Todd Young and
+                  Stefano Cereda and
+                  Thomas Fan and
+                  rene-rex and
+                  Kejia (KJ) Shi and
+                  Justus Schwabedal and
+                  carlosdanielcsantos and
+                  Hvass-Labs and
+                  Mikhail Pak and
+                  SoManyUsernamesTaken and
+                  Fred Callaway and
+                  Loïc Estève and
+                  Lilian Besson and
+                  Mehdi Cherti and
+                  Karlson Pfannschmidt and
+                  Fabian Linzberger and
+                  Christophe Cauet and
+                  Anna Gut and
+                  Andreas Mueller and
+                  Alexander Fabisch},
+  title        = {scikit-optimize/scikit-optimize: v0.5.2},
+  month        = mar,
+  year         = 2018,
+  doi          = {10.5281/zenodo.1207017},
+  url          = {https://doi.org/10.5281/zenodo.1207017}
+}
+@InProceedings{Mokus1978,
+author="Mo{\v{c}}kus, J.",
+editor="Marchuk, G. I.",
+title="On bayesian methods for seeking the extremum",
+booktitle="Optimization Techniques IFIP Technical Conference Novosibirsk, July 1--7, 1974",
+year="1975",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="400--404",
+isbn="978-3-540-37497-8"
+}
+@article{Jones2001,
+  title={A taxonomy of global optimization methods based on response surfaces},
+  author={Jones, Donald R},
+  journal={Journal of global optimization},
+  volume={21},
+  number={4},
+  pages={345--383},
+  year={2001},
+  publisher={Springer}
+}
+@inproceedings{snoek2012,
+  title={Practical bayesian optimization of machine learning algorithms},
+  author={Snoek, Jasper and Larochelle, Hugo and Adams, Ryan P},
+  booktitle={Advances in neural information processing systems},
+  pages={2951--2959},
+  year={2012}
+}
+
+% Differentional evolution
+@article{Storn1997,
+  title={Differential evolution--a simple and efficient heuristic for global optimization over continuous spaces},
+  author={Storn, Rainer and Price, Kenneth},
+  journal={Journal of global optimization},
+  volume={11},
+  number={4},
+  pages={341--359},
+  year={1997},
+  publisher={Springer}
+}
