--- a/bibliography.bib
+++ b/bibliography.bib
@@ -374,3 +374,16 @@ isbn="978-3-540-37497-8"
   year={1997},
   publisher={Springer}
 }
+
+@article{Flood1958,
+author = {Merrill M. Flood},
+title = {Some Experimental Games},
+journal = {Management Science},
+volume = {5},
+number = {1},
+pages = {5-26},
+year = {1958},
+doi = {10.1287/mnsc.5.1.5},
+URL = { https://doi.org/10.1287/mnsc.5.1.5},
+eprint = {https://doi.org/10.1287/mnsc.5.1.5}
+}
