notebook with example of best response dynamics
This include only an example with reactive strategies

--- a/nbs/best response dynamics.ipynb
+++ b/nbs/best response dynamics.ipynb
@@ -159,7 +159,8 @@
     "def reactive_set_dynamics(opponents, sub_player):\n",
     "    p_1, p_2 = sym.symbols(\"p_1, p_2\")\n",
     "    # line that changes\n",
-    "    utility = -opt_mo.tournament_utility((p_1, p_2, p_1, p_2), opponents) + opt_mo.utility((p_1, p_2, p_1, p_2), sub_player)\n",
+    "    utility = (-opt_mo.tournament_utility((p_1, p_2, p_1, p_2), opponents) + \n",
+    "               opt_mo.utility((p_1, p_2, p_1, p_2), sub_player))\n",
     "\n",
     "    derivatives = [sym.diff(utility, i) for i in [p_1, p_2]]\n",
     "    derivatives = [expr.factor() for expr in derivatives]\n",
